# ballotbox

./: .env.example  .gitignore  AGENTS.md  Makefile  README.dev.md  README.md  TICKETS.md  package-lock.json  package.json  product-spec.md
.cursor/: hooks.json
.cursor/hooks/: verify.sh
.cursor/plans/: ballotbox_full_stack_setup_df94adf1.plan.md
.cursor/rules/: backend-python.mdc  frontend-svelte.mdc  makefile-commands.mdc  supabase-db.mdc
.husky/: pre-commit
backend/: .env.example  README.md  pyproject.toml
backend/src/ballotbox/: __init__.py  config.py  main.py  supabase_client.py
backend/tests/: test_health.py
frontend/: .env.example  .fallowrc.json  AGENTS.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: HelloWorld.svelte  hello-world.spec.ts  supabaseClient.ts  votingMethods.ts
frontend/src/lib/create/: CreateVoteFinalizeSection.svelte  CreateVoteMethodField.svelte  CreateVoteOptionInputs.svelte  CreateVoteOptionsSection.svelte  CreateVotePage.svelte  CreateVoteSettingsSection.svelte  CreateVoteTitleField.svelte  create-vote-page.spec.ts  create-vote.css  createVotePage.submit.ts
frontend/src/lib/education/: ComparisonTable.svelte  ComparisonTableRow.svelte  CriterionYesNoIcon.svelte  EducationCriteriaSection.svelte  EducationFurtherReading.svelte  (+7 more)
frontend/src/routes/: +layout.svelte  +page.svelte
supabase/: config.toml
supabase/migrations/: 20260421120000_ballotbox_core.sql  20260616120000_ballotbox_rls.sql  20260618000000_results_detail.sql
(+49 files in other folders)
