[project]
name = "ballotbox"
version = "0.1.0"
description = "Ballotbox API"
readme = "README.md"
# CPython 3.14 — pin with `uv python pin 3.14` (see `.python-version`).
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mangum>=0.19.0",
    "pydantic-settings>=2.7.0",
    # Pin below 2.19: newer supabase pulls storage3 2.x -> pyiceberg (+ native deps) that are fragile on some platforms.
    "supabase>=2.18.0,<2.19",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "ty>=0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ballotbox"]

[tool.uv]
# Prefer interpreters installed by `uv python install` (see `.python-version` + docs).
python-preference = "managed"

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
mypy_path = "src"
packages = ["ballotbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
